# dotfiles

./: .gitignore  NIRI-KEYBINDS.md  README.md  RICING-SUMMARY.md  install.sh  package-list.txt  restore.sh
.config/: kwinrulesrc  plasma-org.kde.plasma.desktop-appletsrc
.config/btop/: btop.conf
.config/cava/: config
.config/fastfetch/: config.jsonc
.config/fish/: config.fish  fish_variables
.config/fresh/themes/: catppuccin-macchiato.json
.config/input-remapper-2/: config.json
.config/neo/: catppuccin-flamingo.colors
.config/neofetch/: config.conf
.config/qutebrowser/: config.py
.config/qutebrowser/bookmarks/: urls
.config/rmpc/: theme.ron
.config/rofi/: config.rasi
.config/vicinae/: settings.json
.config/yazi/: theme.toml
.local/share/applications/: rofi-music.desktop
Pictures/: cat-ascii.txt
Pictures/nzxt/: catppuccin_logo.ans
browser/.config/qutebrowser/: quickmarks
input-remapper/.config/input-remapper-2/: config.json
kde/.config/: kwinrulesrc  plasma-org.kde.plasma.desktop-appletsrc
kde/.config/conky/: conky.conf
launcher/.config/rofi/: config.rasi
launcher/.config/vicinae/: settings.json
lofi-tui/: Cargo.toml  newsboat-to-youtube-tui.py
lofi-tui/src/: main.rs
mako/.config/mako/: config
music/.config/cava/: config
music/.config/mpd/: mpd.conf
music/.config/rmpc/: config.ron  theme.ron
newsboat/.newsboat/: config  urls
niri/.config/niri/: config.kdl
shell/: .zshrc
shell/.config/: starship.toml
shell/.config/fish/: config.fish  fish_variables
sway/.config/sway/: config
waybar/.config/waybar/: config  (+1 more)
(+37 files in other folders)
