[package]
name = "lofi-tui"
version = "0.1.0"
edition = "2021"
description = "A lofi stream picker with thumbnail previews"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["full", "process"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
ratatui-image = "10.0"
anyhow = "1"
dirs = "5"
